fp-macros/tests/ui/apply_signature_and_kind.rs
use fp_macros::Apply;

struct MyBrand;
trait MyKind {}

fn main() {
    type T = Apply!(
        brand: MyBrand,
        signature: (i32),
        kind: MyKind
    );
}
